--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Club de Leones - Tibas </title>
+    <title>Club de Leones de Tibás </title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -63,7 +63,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Club de leones Tibas. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Club de leones de Tibas. Todos los derechos reservados.</p>
     </footer>
 
 </body>
